# basicsOGL

./: CMakeLists.txt
src/: linear_algebra.cpp  linear_algebra.h  main.cpp  material.cpp  triangle_mesh_1.cpp  triangle_mesh_1.h  triangle_mesh_2.cpp  triangle_mesh_2.h
src/shaders/: fragment.txt  vertex.txt
